<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:scrollbars="horizontal|vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtUsuario" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtCodEmpresa" />

                    <EditText
                        android:id="@+id/etCodCliente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtHintCodigoCliente"
                        android:maxLength="22"
                        android:maxLines="1"
                        android:width="250dip" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtEmpresa" />

                    <EditText
                        android:id="@+id/etCliente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtHintCliente"
                        android:maxLength="80"
                        android:maxLines="1"
                        android:width="500dip" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtDomicilio" />

                    <EditText
                        android:id="@+id/etDomicilio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtHintDomicilio"
                        android:maxLength="80"
                        android:maxLines="1"
                        android:width="500dip" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtPoblacion" />

                    <EditText
                        android:id="@+id/etPoblacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtHintPoblacion"
                        android:maxLength="80"
                        android:maxLines="1"
                        android:width="500dip" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtTelefono" />

                    <EditText
                        android:id="@+id/etTelefono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:digits="1234567890"
                        android:hint="@string/txtHintTelefono"
                        android:maxLength="9"
                        android:maxLines="1"
                        android:width="150dip" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtCIF" />

                    <EditText
                        android:id="@+id/etCIF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtHintCIF"
                        android:maxLength="16"
                        android:maxLines="1"
                        android:width="200dip" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/chkLabelFecha" />

                    <DatePicker
                        android:id="@+id/dpResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:saveEnabled="false" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chkLabel105" />

                    <TextView
                        android:id="@+id/tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#f00"
                        android:textStyle="italic"
                        android:typeface="serif" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="actionNewRow"
                        android:text="@string/btnNuevaFila" />
                    <!-- comienza la tabla -->

                    <TableLayout
                        android:id="@+id/tabla_cuerpo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:shrinkColumns="*"
                        android:stretchColumns="*" 
                        android:background="@drawable/roundshape"
                        >

                        <TableRow
                            android:id="@+id/tableRow1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal" >

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_span="6"
                                android:gravity="center"
                                android:text="@string/cabeceraTabla"
                                android:textColor="#000"
                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            
                            <TextView
                                android:id="@+id/tv5"
                                android:text="@string/btnBorrarFila" 
                                android:layout_weight="6"
                                android:gravity="center"/>
                            <TextView
                                android:id="@+id/tv1"
                                android:text="@string/lblDescripcion" 
                                android:layout_weight="1"
                                android:gravity="center"/>
                            <!-- android:layout_width="match_parent" -->
                            <!-- android:layout_height="match_parent" -->

                            <TextView
                                android:id="@+id/tv2"
                                android:text="@string/lblCantidad"
                                android:layout_weight="2" 
                                android:gravity="center"/>
                            <!-- android:layout_width="match_parent" -->
                            <!-- android:layout_height="match_parent" -->

                            <TextView
                                android:id="@+id/tv3"
                                android:text="@string/lblPrecio" 
                                android:layout_weight="3"
                                android:gravity="center"/>
                            <!-- android:layout_width="match_parent" -->
                            <!-- android:layout_height="match_parent" -->

                            <TextView
                                android:id="@+id/tv4"
                                android:text="@string/lblDescuento" 
                                android:layout_weight="4"
                                android:gravity="center"/>
                            <!-- android:layout_width="match_parent" -->
                            <!-- android:layout_height="match_parent" -->

                        </TableRow>
                    </TableLayout>
                    <!-- fin de la tabla -->

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</ScrollView>